[package]
name = "testbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
rand = "0.8.0"
markov = "1.1.0"
inline-python = "0.10.0"
# lipsum = "0.8.2"
sedregex = "0.2.5"
serde = {version = "1.0.138", features = ["derive", "rc"] }
serde_json = "1.0.82"
chrono = "0.4.23"
fastrand = "1.8.0"
# confy = "0.5.1"

[dependencies.confy]
features = ["toml_conf"]
default-features = false
